# final_project

./: .dockerignore  .env.example  .gitignore  FINAL_PROJECT_README.md  README.md  WEEKLY_BRIEF_DESIGN.md  pyproject.toml
airflow/: requirements.txt
airflow/dags/: advisory_weekly_dag.py  attack_weekly_dag.py  cwe_catalog_dag.py  kev_sync_dag.py  kev_weekly_dag.py  neo4j_structured_sync_dag.py  nvd_fetch_dag.py  nvd_incremental_dag.py  nvd_load_dag.py  nvd_s3_slice_pipeline_dag.py  nvd_transform_dag.py  nvd_weekly_delta_dag.py
alembic/: env.py
alembic/versions/: 992c03d4f851_create_advisory_tables.py  a1b2c3d4e5f6_add_document_type_to_advisories.py  b2c3d4e5f6a7_add_sub_section_to_advisory_chunks.py  c4d5e6f7a8b9_create_llm_usage_log.py
app/: config.py  logging_config.py  main.py  streamlit_app.py  token_logger.py
app/models/: __init__.py  common.py
app/routers/: __init__.py  actor.py  advisories.py  advisory.py  brief.py  cve.py  graph_attack_path.py  graph_query.py  health.py  hybrid_search.py  metrics.py  query.py  technique.py  vector_search.py  weekly_brief.py  weekly_digest.py
app/services/: __init__.py  bm25_index.py  cti_graph.py  doctype_classifier.py  hybrid_search.py  llm_router.py  llm_usage_log.py  metrics.py  neo4j_service.py  rag_router.py  redis_cache.py  s3_storage.py  search_tool_schema.py  snowflake.py  text2cypher.py  vector_search.py  weekly_brief.py  weekly_digest.py
docker/: Dockerfile  Dockerfile.streamlit  docker-compose.airflow.yml  docker-compose.yml
docker/airflow/: Dockerfile  requirements-dag-runtime.txt
ingestion/: __init__.py
ingestion/advisory/: chunk_loader.py  chunker_v2.py  classifier.py  embedder.py  html_parser.py  scraper.py  triplets.py
ingestion/attack/: __init__.py  loader.py  parser.py  pipeline.py  transform.py
ingestion/cwe/: __init__.py  loader.py  snowflake_load.py  transform.py  xml_catalog.py
ingestion/graph_sync/: __init__.py  attack_techniques_sync.py  cve_cwe_kev.py  kev_neo4j_sync.py
ingestion/kev/: __init__.py  client.py  enricher.py  pending_resolver.py
ingestion/monitoring/: __init__.py  checkpoints.py  snowflake_runs.py
ingestion/nvd/: __init__.py  client.py  (+6 more)
notebooks/: vectordb_eval.ipynb
scripts/: align_entities.py  apply_ingestion_monitoring.py  attack_ingest.py  backfill_document_type.py  bridge_kev_products_to_cves.py  build_bm25_index.py  build_eval_notebook.py  classify_dryrun.py  collect_entities.py  create_llm_token_log.sql  cwe_catalog.py  embed_advisories.py  embed_advisory_chunks.py  embed_demo_pool.py  evaluate_triplet.py  extract_triplets.py  fetch_cwe_catalog.py  generate_gold_triplets.py  infer_relations.py  kev_ingest.py  llm_cost_breakdown.sql  load_neo4j.py  neo4j_sync_structured.py  nvd_ingest.py  push_snowflake_ddl.py  run_token_benchmark.py  seed_demo_pool.py
streamlit_cti/: Home.py  theme.py
(+58 files in other folders)
